force-app/main/default/objects/ServiceTerritory/ServiceTerritory.object-meta.xml
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>