force-app/main/default/objects/ServiceTerritory/fields/Distanciamento__c.field-meta.xml
<CustomField>
    <fullName>Distanciamento__c</fullName>
    <label>Distanciamento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>