force-app/main/default/objects/ServiceTerritory/fields/FSL__O2_Enabled__c.field-meta.xml
<CustomField>
    <fullName>FSL__O2_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if enhanced scheduling and optimization engine is used</description>
    <label>Use enhanced scheduling and optimization</label>
    <type>Checkbox</type>
</CustomField>