force-app/main/default/objects/ServiceTerritory/fields/FSL__System_Jobs__c.field-meta.xml
<CustomField>
    <fullName>FSL__System_Jobs__c</fullName>
    <label>System Jobs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BATCH_ServicesInJeopardy</fullName>
            </value>
            <value>
                <fullName>BATCH_ServicesDispatched</fullName>
            </value>
            <value>
                <fullName>ChatterNotification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>