force-app/main/default/objects/ServiceTerritory/fields/LocalDificilAcesso__c.field-meta.xml
<CustomField>
    <fullName>LocalDificilAcesso__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Regiões marcadas como Local de díficil acesso não poderão ser realizados agendamentos na mesma.</inlineHelpText>
    <label>Local de difícil acesso</label>
    <type>Checkbox</type>
</CustomField>