force-app/main/default/objects/ServiceTerritory/fields/Risco__c.field-meta.xml
<CustomField>
    <fullName>Risco__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Regiões marcadas como Área de risco não poderão ser realizados agendamentos na mesma.</inlineHelpText>
    <label>Área de risco</label>
    <type>Checkbox</type>
</CustomField>