force-app/main/default/objects/ServiceTerritory/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <inlineHelpText>Informe se a região é uma Cidade ou Bairro.</inlineHelpText>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cidade</fullName>
            </value>
            <value>
                <fullName>Bairro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>