force-app/main/default/objects/ServiceTerritory/listViews/My_ServiceTerritories.listView-meta.xml
<ListView>
    <fullName>My_ServiceTerritories</fullName>
    <filterScope>Mine</filterScope>
    <label>Meus Territórios de serviços</label>
</ListView>